--- a/public/scss/_custom.scss
+++ b/public/scss/_custom.scss
@@ -41,7 +41,7 @@ img {
                 padding: 0;
                 position: absolute;
                 width: 100%;
-                height: 200px;
+                height: 300px;
             }
             .title {
                 text-transform: lowercase !important;
@@ -123,7 +123,7 @@ img {
             display: inline-block;
             max-width: 30%;
             overflow: hidden;
-            height: 200px;
+            height: 300px;
             z-index: inherit;
             background: $black;
             img {
@@ -403,11 +403,11 @@ img {
     .whytopost-ddkits-principal {
         min-width: 100%;
         padding: 10px;
-        background: transparent;
+        background: rgba(255, 255, 255, 0.3);
     }
 
     .ddkits-blog-home {
-        background: transparent;
+        background: rgba(255, 255, 255, 0.3);
         h2 {
             text-align: center;
             font-weight: 300;
@@ -435,7 +435,7 @@ img {
         }
     }
     .ddkits-blog-home-recent {
-        background: transparent;
+        background: rgba(255, 255, 255, 0.3);
         margin: 20px 0px;
         width: 100% !important;
         h2 {
@@ -571,10 +571,10 @@ img {
             width: 100%;
             height: 100%;
             z-index: 5;
-            opacity: 0.2;
+            opacity: 0.5;
         }
         .whytopost-ddkits-principal-home {
-            vertical-align: top;
+            vertical-align: bottom;
             color: $white;
             width: 100%;
             padding: 0 10px;
